--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,9 @@
         "C:\\Users\\zuhri\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages",
         "C:\\Users\\zuhri\\AppData\\Local\\Programs\\Python\\Python311\\Lib",
         "./SDK"
-    ]
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
